--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -12865,16 +12865,50 @@ on current Chronojump version.</property>
                                                 <property name="spacing">4</property>
                                                 <property name="homogeneous">True</property>
                                                 <child>
-                                                  <widget class="GtkNotebook" id="notebook3">
+                                                  <widget class="GtkHBox" id="hbox74">
                                                     <property name="visible">True</property>
-                                                    <property name="can_focus">True</property>
+                                                    <property name="can_focus">False</property>
                                                     <child>
-                                                      <widget class="GtkFrame" id="frame7">
+                                                      <widget class="GtkVBox" id="vbox7">
                                                         <property name="visible">True</property>
-                                                        <property name="sensitive">False</property>
                                                         <property name="can_focus">False</property>
-                                                        <property name="label_xalign">0</property>
-                                                        <property name="shadow_type">out</property>
+                                                        <child>
+                                                          <widget class="GtkSpinButton" id="spin_encoder_capture_height">
+                                                            <property name="visible">True</property>
+                                                            <property name="can_focus">True</property>
+                                                            <property name="has_tooltip">True</property>
+                                                            <property name="tooltip" translatable="yes">On capture: displayed positive and negative height in meters</property>
+                                                            <property name="invisible_char">●</property>
+                                                            <property name="width_chars">3</property>
+                                                            <property name="invisible_char_set">True</property>
+                                                            <property name="primary_icon_activatable">False</property>
+                                                            <property name="secondary_icon_activatable">False</property>
+                                                            <property name="primary_icon_sensitive">True</property>
+                                                            <property name="secondary_icon_sensitive">True</property>
+                                                            <property name="adjustment">1 0.5 3 0.5 1 0</property>
+                                                            <property name="climb_rate">1</property>
+                                                            <property name="digits">1</property>
+                                                            <property name="snap_to_ticks">True</property>
+                                                            <property name="numeric">True</property>
+                                                          </widget>
+                                                          <packing>
+                                                            <property name="expand">False</property>
+                                                            <property name="fill">False</property>
+                                                            <property name="position">0</property>
+                                                          </packing>
+                                                        </child>
+                                                      </widget>
+                                                      <packing>
+                                                        <property name="expand">False</property>
+                                                        <property name="fill">False</property>
+                                                        <property name="position">0</property>
+                                                      </packing>
+                                                    </child>
+                                                    <child>
+                                                      <widget class="GtkNotebook" id="notebook_encoder_capture">
+                                                        <property name="visible">True</property>
+                                                        <property name="can_focus">False</property>
+                                                        <property name="show_tabs">False</property>
                                                         <child>
                                                           <widget class="GtkDrawingArea" id="encoder_capture_drawingarea">
                                                             <property name="visible">True</property>
@@ -12885,54 +12919,50 @@ on current Chronojump version.</property>
                                                           </widget>
                                                         </child>
                                                         <child>
-                                                          <widget class="GtkLabel" id="label_encoder_capture_title">
+                                                          <widget class="GtkLabel" id="label_encoder_capture">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
+                                                            <property name="label" translatable="yes">capture</property>
                                                           </widget>
                                                           <packing>
-                                                            <property name="type">label_item</property>
+                                                            <property name="tab_fill">False</property>
+                                                            <property name="type">tab</property>
                                                           </packing>
                                                         </child>
-                                                      </widget>
-                                                    </child>
-                                                    <child>
-                                                      <widget class="GtkLabel" id="label114">
-                                                        <property name="visible">True</property>
-                                                        <property name="can_focus">False</property>
-                                                        <property name="label" translatable="yes">page 1</property>
-                                                      </widget>
-                                                      <packing>
-                                                        <property name="tab_fill">False</property>
-                                                        <property name="type">tab</property>
-                                                      </packing>
-                                                    </child>
-                                                    <child>
-                                                      <widget class="GtkViewport" id="viewport_image_encoder_capture">
-                                                        <property name="visible">True</property>
-                                                        <property name="can_focus">False</property>
-                                                        <property name="resize_mode">queue</property>
                                                         <child>
-                                                          <widget class="GtkImage" id="image_encoder_capture">
+                                                          <widget class="GtkViewport" id="viewport_image_encoder_capture">
+                                                            <property name="visible">True</property>
+                                                            <property name="can_focus">False</property>
+                                                            <property name="resize_mode">queue</property>
+                                                            <child>
+                                                            <widget class="GtkImage" id="image_encoder_capture">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
                                                             <property name="stock">gtk-missing-image</property>
+                                                            </widget>
+                                                            </child>
                                                           </widget>
+                                                          <packing>
+                                                            <property name="position">1</property>
+                                                          </packing>
+                                                        </child>
+                                                        <child>
+                                                          <widget class="GtkLabel" id="label115">
+                                                            <property name="visible">True</property>
+                                                            <property name="can_focus">False</property>
+                                                            <property name="label" translatable="yes">curves</property>
+                                                          </widget>
+                                                          <packing>
+                                                            <property name="position">1</property>
+                                                            <property name="tab_fill">False</property>
+                                                            <property name="type">tab</property>
+                                                          </packing>
                                                         </child>
                                                       </widget>
                                                       <packing>
+                                                        <property name="expand">True</property>
+                                                        <property name="fill">True</property>
                                                         <property name="position">1</property>
-                                                      </packing>
-                                                    </child>
-                                                    <child>
-                                                      <widget class="GtkLabel" id="label115">
-                                                        <property name="visible">True</property>
-                                                        <property name="can_focus">False</property>
-                                                        <property name="label" translatable="yes">page 2</property>
-                                                      </widget>
-                                                      <packing>
-                                                        <property name="position">1</property>
-                                                        <property name="tab_fill">False</property>
-                                                        <property name="type">tab</property>
                                                       </packing>
                                                     </child>
                                                   </widget>
