--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -16400,6 +16400,7 @@ Just select and then close this window.</property>
                 <property name="can_focus">True</property>
                 <property name="xalign">0</property>
                 <property name="use_markup">True</property>
+                <property name="wrap">True</property>
                 <property name="selectable">True</property>
               </widget>
               <packing>
