--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -13941,7 +13941,7 @@ on current Chronojump version.</property>
                             <child>
                               <widget class="GtkLabel" id="label95">
                                 <property name="can_focus">False</property>
-                                <property name="label">Presentació tesi doctoral</property>
+                                <property name="label">Presentation</property>
                               </widget>
                               <packing>
                                 <property name="position">2</property>
@@ -14630,41 +14630,79 @@ Evaluator can use real name or nickname.</property>
         <property name="can_focus">False</property>
         <property name="spacing">12</property>
         <child>
-          <widget class="GtkTable" id="table1">
+          <widget class="GtkAlignment" id="alignment5">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="n_columns">2</property>
-            <property name="column_spacing">2</property>
-            <property name="row_spacing">2</property>
+            <property name="top_padding">8</property>
+            <property name="left_padding">12</property>
+            <property name="right_padding">12</property>
             <child>
-              <widget class="GtkRadioButton" id="radio_contacts">
-                <property name="label" translatable="yes">Contacts
+              <widget class="GtkFrame" id="frame3">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="label_xalign">0</property>
+                <property name="label_yalign">0.69999998807907104</property>
+                <property name="shadow_type">out</property>
+                <child>
+                  <widget class="GtkAlignment" id="alignment7">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="top_padding">8</property>
+                    <property name="bottom_padding">8</property>
+                    <property name="left_padding">12</property>
+                    <property name="right_padding">12</property>
+                    <child>
+                      <widget class="GtkTable" id="table1">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="n_columns">2</property>
+                        <property name="column_spacing">2</property>
+                        <property name="row_spacing">2</property>
+                        <child>
+                          <widget class="GtkRadioButton" id="radio_contacts">
+                            <property name="label" translatable="yes">Contacts
 (platform or photocell)</property>
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">False</property>
-                <property name="use_action_appearance">False</property>
-                <property name="active">True</property>
-                <property name="draw_indicator">True</property>
-                <signal name="toggled" handler="on_radio_contacts_toggled" swapped="no"/>
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="receives_default">False</property>
+                            <property name="use_action_appearance">False</property>
+                            <property name="active">True</property>
+                            <property name="draw_indicator">True</property>
+                            <signal name="toggled" handler="on_radio_contacts_toggled" swapped="no"/>
+                          </widget>
+                        </child>
+                        <child>
+                          <widget class="GtkRadioButton" id="radio_encoder">
+                            <property name="label" translatable="yes">Linear encoder</property>
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="receives_default">False</property>
+                            <property name="use_action_appearance">False</property>
+                            <property name="draw_indicator">True</property>
+                            <property name="group">radio_contacts</property>
+                            <signal name="toggled" handler="on_radio_encoder_toggled" swapped="no"/>
+                          </widget>
+                          <packing>
+                            <property name="left_attach">1</property>
+                            <property name="right_attach">2</property>
+                          </packing>
+                        </child>
+                      </widget>
+                    </child>
+                  </widget>
+                </child>
+                <child>
+                  <widget class="GtkLabel" id="label4">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="label" translatable="yes">&lt;b&gt;Select your connection&lt;/b&gt;</property>
+                    <property name="use_markup">True</property>
+                  </widget>
+                  <packing>
+                    <property name="type">label_item</property>
+                  </packing>
+                </child>
               </widget>
-            </child>
-            <child>
-              <widget class="GtkRadioButton" id="radio_encoder">
-                <property name="label" translatable="yes">Linear encoder</property>
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">False</property>
-                <property name="use_action_appearance">False</property>
-                <property name="active">True</property>
-                <property name="draw_indicator">True</property>
-                <property name="group">radio_contacts</property>
-                <signal name="toggled" handler="on_radio_encoder_toggled" swapped="no"/>
-              </widget>
-              <packing>
-                <property name="left_attach">1</property>
-                <property name="right_attach">2</property>
-              </packing>
             </child>
           </widget>
           <packing>
@@ -14678,6 +14716,7 @@ Evaluator can use real name or nickname.</property>
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="show_tabs">False</property>
+            <property name="show_border">False</property>
             <property name="tab_border">4</property>
             <property name="tab_hborder">8</property>
             <property name="tab_vborder">0</property>
@@ -14705,8 +14744,8 @@ Evaluator can use real name or nickname.</property>
                           <widget class="GtkAlignment" id="alignment2">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
-                            <property name="top_padding">12</property>
-                            <property name="bottom_padding">12</property>
+                            <property name="top_padding">8</property>
+                            <property name="bottom_padding">8</property>
                             <property name="left_padding">12</property>
                             <property name="right_padding">12</property>
                             <child>
@@ -14840,8 +14879,8 @@ Evaluator can use real name or nickname.</property>
                           <widget class="GtkAlignment" id="alignment3">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
-                            <property name="top_padding">12</property>
-                            <property name="bottom_padding">12</property>
+                            <property name="top_padding">8</property>
+                            <property name="bottom_padding">8</property>
                             <property name="left_padding">12</property>
                             <property name="right_padding">12</property>
                             <child>
@@ -15327,18 +15366,26 @@ Just select and then close this window.</property>
           </packing>
         </child>
         <child>
-          <widget class="GtkTextView" id="textview_ports_found_explanation">
+          <widget class="GtkAlignment" id="alignment6">
             <property name="visible">True</property>
-            <property name="sensitive">False</property>
-            <property name="can_focus">True</property>
-            <property name="pixels_above_lines">6</property>
-            <property name="pixels_below_lines">6</property>
-            <property name="editable">False</property>
-            <property name="wrap_mode">word</property>
-            <property name="left_margin">6</property>
-            <property name="right_margin">2</property>
-            <property name="cursor_visible">False</property>
-            <property name="accepts_tab">False</property>
+            <property name="can_focus">False</property>
+            <property name="left_padding">12</property>
+            <property name="right_padding">12</property>
+            <child>
+              <widget class="GtkTextView" id="textview_ports_found_explanation">
+                <property name="visible">True</property>
+                <property name="sensitive">False</property>
+                <property name="can_focus">True</property>
+                <property name="pixels_above_lines">6</property>
+                <property name="pixels_below_lines">6</property>
+                <property name="editable">False</property>
+                <property name="wrap_mode">word</property>
+                <property name="left_margin">6</property>
+                <property name="right_margin">2</property>
+                <property name="cursor_visible">False</property>
+                <property name="accepts_tab">False</property>
+              </widget>
+            </child>
           </widget>
           <packing>
             <property name="expand">True</property>
